Fixed layout bug that cut off menus in mobile view

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -23,10 +23,16 @@ img {
 .wrapper {
   margin: auto;
   max-width: 1200px;
-  height: 100vh;
+  justify-content: center;
+  height: 100%;
 }
 
 // Header and footer layout
+
+.header-footer {
+  position: absolute;
+  width: 100%;
+}
 
 header,
 footer {
